[project]
name = "etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26,<2",
    "pandas>=2.2,<3",
    "psycopg2-binary==2.9.6",
    "pymysql==1.0.3",
    "pytest==7.3.1",
    "pytest-mock==3.10.0",
    "python-dotenv==1.0.0",
    "pyyaml>=6.0.2,<7",
    "rich==13.4.1",
    "sqlalchemy==2.0.15",
]
